--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 :root {
-    --blush:#f3d0c4; 
+    --blush:rgb(243, 208, 196); 
     --light: #f0e9e8; 
     --dark1: #8d8d9b;
-    --dark2: #707083;
+    --dark2: rgb(112, 112, 131);
 }
 
 body {
     background: url(images/pinklight-background.jpg)no-repeat center fixed;
     background-size: cover;
-    font-size: 24px; 
+    font-size: 18px; 
     margin: 8px; 
 }
 
 nav {
+/*nav bar*/ 
     background-color: var(--blush); 
     position:fixed; 
     top:2%; 
     width:100%;
+    z-index:1; 
 }
 
 h4.navbutton {
+/*nav buttons */ 
     font-size:1.5em; 
     background-color: var(--dark1); 
     border:2px solid var(--light); 
@@ -39,22 +42,25 @@ h4.navbutton {
     color: var(--light);  
 }
 h1 {
+/*Amanda Morgan*/ 
     color: var(--blush); 
-    background-color: var(--dark1); opacity:.7; 
+    background-color: rgb(112, 112, 131, .5); 
     font-size:3em; 
     text-align: center; 
     margin-top: 200px;
     width: 100%; 
+    padding: 5%; 
+    margin-bottom: 15%; 
 }
 aside {
-    /*This is the profile pic with Bob Ross quote container*/ 
+/*This is the profile pic with Bob Ross quote container*/ 
     display: inline-block; 
     width: 30%; 
     height: 300px;   
     position: relative;  
 }
 #profile-pic { 
-    /*This is the profile pic container*/ 
+/*This is the profile pic container*/ 
     width: 300px;
     height: 300px; 
     position:absolute; 
@@ -66,7 +72,7 @@ aside {
     border-radius: 50%; 
 }
 .overlay {
-    /*This is the dark grey overlay that shows up on hover*/ 
+/*This is the dark grey overlay that shows up on hover*/ 
     position: absolute; 
     top:0; 
     left:20px; 
@@ -82,7 +88,7 @@ aside:hover .overlay {
     opacity: 1;
 }
 .overlay-text{
-    /*This is the Bob Ross quote*/ 
+/*Bob Ross quote*/ 
     color: var(--blush); 
     position:absolute;   
     top:100px;     
@@ -93,6 +99,7 @@ aside:hover .overlay {
     text-align: center; 
 }
 .bio-scroll {
+/*scrolling textbox about me*/ 
     display: inline-block;
     width: 65%;
     height: 300px;  
@@ -100,6 +107,58 @@ aside:hover .overlay {
     position: relative;   
     overflow:scroll; 
     padding-left:10px; 
+}
+.projects {
+/*section background*/ 
+    background-color: rgb(243, 208, 196, 0.5); 
+    margin-top: 40%;  
+}
+
+#projects {
+/* project heading*/ 
+    background-color: var(--dark1); 
+    color: var(--blush); 
+    border-radius: 50%; 
+    font-size: 2em; 
+    width: 50%; 
+    margin: 50px auto; 
+    box-shadow: 2px 2px 5px grey; 
+    border:2px solid var(--light);   
+    padding: 20px; 
+    text-align: center;  
+}
+.flex-element {
+/*image background*/
+    width: 300px;
+}
+.flex-element img{
+/*project pictures*/ 
+    width: 90%; 
+    height: 60%;  
+    border: 2px solid var(--light);  
+    box-shadow: 2px 2px 5px grey; 
+    border-radius: 50%;  
+    margin: 10px; 
+    filter: grayscale(100%); 
+    transition: all 1s ease-in-out;
+}
+.flex-element img:hover {
+    filter:grayscale(0%); 
+    cursor:pointer;
+    transform: scale(1.5);
+}
+.flexbox {
+/*flex conatiner*/ 
+    display: flex; 
+    flex-direction: row; 
+    justify-content: space-evenly; 
+    flex-wrap: wrap;   
+}
+.flexbox h4 { 
+/*image header*/ 
+    color: var(--dark2); 
+    text-align: center; 
+    font-size: 1.2em; 
 }
 /* @media (max-width: 768px) {
 This is for laptops.  
