--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --blush:rgb(243, 208, 196); 
-    --light: #f0e9e8; 
-    --dark1: #8d8d9b;
+    --blush:rgb(235, 202, 218); 
+    --light: #f7eeec; 
+    --dark1: #7d7d8a;
     --dark2: rgb(112, 112, 131);
 }
 
@@ -10,6 +10,7 @@ body {
     background-size: cover;
     font-size: 18px; 
     margin: 8px; 
+    font-family: 'Playfair Display', serif;
 }
 
 nav {
@@ -49,20 +50,20 @@ h1 {
     text-align: center; 
     margin-top: 200px;
     width: 100%; 
-    padding: 5%; 
-    margin-bottom: 15%; 
+    padding: 2%; 
+    margin-bottom: 10%; 
 }
 aside {
 /*This is the profile pic with Bob Ross quote container*/ 
     display: inline-block; 
-    width: 30%; 
-    height: 300px;   
+    width: 300px; 
+    height: 300px;    
     position: relative;  
 }
 #profile-pic { 
 /*This is the profile pic container*/ 
-    width: 300px;
-    height: 300px; 
+    width: 280px;
+    height: 280px; 
     position:absolute; 
     top:0; 
     left:20px;    
@@ -76,8 +77,8 @@ aside {
     position: absolute; 
     top:0; 
     left:20px; 
-    height: 300px; 
-    width:300px; 
+    height: 280px; 
+    width:280px; 
     border-radius:50%; 
     border:2px solid var(--light); 
     background-color: var(--dark2); 
@@ -92,8 +93,8 @@ aside:hover .overlay {
     color: var(--blush); 
     position:absolute;   
     top:100px;     
-    height: 300px; 
-    width: 300px;     
+    height: 280px; 
+    width: 280px;     
     transition: all .5s ease-in-out;
     border-radius: 50%; 
     text-align: center; 
@@ -107,11 +108,12 @@ aside:hover .overlay {
     position: relative;   
     overflow:scroll; 
     padding-left:10px; 
+    margin-left: 20px; 
 }
 .projects {
 /*section background*/ 
-    background-color: rgb(243, 208, 196, 0.5); 
-    margin-top: 40%;  
+    background-color: rgb(235, 202, 218, 0.5); 
+    margin-top: 10%;  
 }
 
 #projects {
@@ -129,7 +131,7 @@ aside:hover .overlay {
 }
 .flex-element {
 /*image background*/
-    width: 300px;
+    width: 250px;
 }
 .flex-element img{
 /*project pictures*/ 
@@ -160,6 +162,76 @@ aside:hover .overlay {
     text-align: center; 
     font-size: 1.2em; 
 }
+.form-container {
+    background-color: var(--light);
+    width: 50%;   
+    position: relative; 
+    margin: 10% auto; 
+    border-radius: 2%;
+    border: 2px solid var(--dark1); 
+    padding: 5%;  
+}
+#contact {
+    position: absolute; 
+    top: -60px; 
+    left: -50px; 
+    background-color: var(--dark1); 
+    color: var(--blush); 
+    border-radius: 60%; 
+    box-shadow: 2px 2px 5px grey; 
+    border: 2px solid var(--light);
+    padding: 20px 10px;   
+    width: 30%;
+    text-align: center;   
+}
+form input{ 
+    width: 100%; 
+    line-height: 2; 
+    margin: 10px 5px; 
+}
+form textarea {
+    width: 100%;  
+    margin:10px 5px;  
+}
+#submit {
+    width: 50%; 
+    background-color: var(--dark1); 
+    color: var(--blush); 
+    border: 4px outset var(--dark2); 
+    font-size:1em; 
+}
+#submit:hover {
+    cursor: pointer;
+}
+#submit:visited {
+    border:4px inset var(--dark2); 
+    color: black; 
+}
+footer {
+/*footer container*/ 
+    background-color:rgb(235, 202, 218);  
+    position:relative;
+}
+#links {
+/*footer text*/ 
+    font-size:1em; 
+    width: 50%; 
+    display:inline;    
+}
+.etsy-link img{
+/*facebook logo*/  
+    width: 8%; 
+    position: absolute; 
+    bottom: 0; 
+    right: 0; 
+}
+
+.github-link img{ 
+    width:8%;  
+    position: absolute; 
+    bottom: 0; 
+    right: 10%; 
+} 
 /* @media (max-width: 768px) {
 This is for laptops.  
 }
