--- a/style.css
+++ b/style.css
@@ -244,11 +244,10 @@ footer {
 
 @media screen and (max-width: 768px) {
 aside {
-    width:100%; 
-    display:inline; 
+    display:block; 
+    margin:0 auto;  
 }
-.bio-scroll {
-    width: 100%; 
-    display:inline; 
-}
+.bio-scroll { 
+    display:block; 
+    margin: 0 auto; 
 }
