--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -12,7 +12,9 @@ body {
     background: url(/images/pinklight-background.jpg)no-repeat center fixed;
     background-size: cover;
 }
-
+section {
+    height: 700px; 
+}
 /* Nav Bar  */
 .nav-wrapper-custom {
     background-color: var(--blush);
@@ -94,4 +96,24 @@ body {
 #profile-link a:hover {
     color:var(--dark2); 
     text-decoration: underline;
+}
+/* About Me Page */
+#about-me-page h3{
+    text-align: center;
+    text-shadow: 2px 2px var(--light);
+}
+.about-me-text {
+    background-color: rgb(255, 255, 255, .7); 
+    padding: 50px;
+    box-shadow: 2px 2px 6px var(--dark2);
+    margin: 20px; 
+    line-height: 1.6em;
+    border-radius: 25px;
+}
+.about-me-text a{
+    color:var(--dark1); 
+}
+.about-me-text a:hover {
+    text-decoration: underline;
+    color:var(--dark2); 
 }
