--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -134,3 +134,15 @@ body {
 .project-nav {
     text-align: center;
 }
+/* Contact Me Page */
+#contact {
+    text-align: center;
+    text-shadow: 2px 2px var(--light);
+}
+#submit-btn{
+    background-color: var(--dark1);
+    border-radius: 10px;
+}
+#submit-btn:hover {
+    background-color: var(--dark2);
+}
