--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -1,5 +1,5 @@
 :root {
-    --blush:rgb(235, 202, 218); 
+    --blush:rgb(216, 183, 199); 
     --light: rgb(255, 255, 255); 
     --dark1: #747487;
     --dark2: rgb(78, 78, 103);
@@ -146,3 +146,21 @@ body {
 #submit-btn:hover {
     background-color: var(--dark2);
 }
+
+/* Footer Section */
+.custom-footer {
+    background: var(--blush); 
+}
+.custom-link {
+    color: var(--dark1); 
+    padding:20px;   
+}
+.custom-link i{
+    font-size: 2em;
+    margin-top: 20px;
+}
+.custom-link i:hover {
+    color: var(--dark2); 
+}
+
+/* TO DO: Add Media Queries for responsive design. Everything needs to just be stacked on top of one another */
