--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -2,11 +2,12 @@
     --blush:rgb(216, 183, 199); 
     --light: rgb(255, 255, 255); 
     --dark1: #747487;
-    --dark2: rgb(78, 78, 103);
+    --dark2: rgb(59, 59, 77);
 }
 * {
     font-family: 'Playfair Display', serif;
     font-size: 16px;
+    color:var(--dark2); 
 }
 body {
     background: url(/images/pinklight-background.jpg)no-repeat center fixed;
@@ -17,16 +18,18 @@ body {
 } */
 /* Nav Bar  */
 .nav-wrapper-custom {
-    background-color: var(--blush);
+    background-image: linear-gradient(to right, var(--dark1), var(--dark2));
 }
 .nav-wrapper-custom a{ 
-    color: var(--dark2); 
-    font-weight:bold; 
-    border: 1px solid var(--light); 
-    border-radius: 25px;
+    color: var(--blush); 
+    font-weight:bold;  
+}
+#home-icon-wrapper {
+    border:none; 
 }
 #home-icon {
-    border: none; 
+    color: var(--blush);
+    font-size: 1.5em;  
 }
 
 /* Home Page */
@@ -84,6 +87,9 @@ body {
 .card-content-header i, .card-content-header h3{
     font-size: 2em;
     padding: 5px; 
+}
+.card-content-header h3 {
+    margin-bottom: 30px; 
 }
 .card-body p{
     padding: 40px 10px; 
