--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -160,7 +160,11 @@ body {
     border:1px solid var(--dark1); 
     box-shadow: 2px 2px 6px var(--dark2);
 }
-
+/* Resume Page */
+#resume-page{
+    display: flex; 
+    justify-content: center; 
+}
 /* Contact Me Page */
 #contact {
     text-align: center;
