--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -9,9 +9,16 @@
     font-size: 16px;
     color:var(--dark2); 
 }
+
+main {
+    flex: 1 0 auto;
+}
 body {
     background: url(/images/pinklight-background.jpg)no-repeat center fixed;
     background-size: cover;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 .hide {
     display:none; 
@@ -53,11 +60,13 @@ body {
     background-color: var(--dark1);
     color: var(--blush); 
     border-radius: 50%;
-    position: absolute;
-    width: 400px; 
-    height: 400px; 
-    left: 20px; 
+    position: absolute;  
     top: 20px; 
+    left: 50%; 
+    margin-left: -200px;  
+    text-align: center;
+    width: 400px; 
+    height: 400px;  
     border: 1px solid var(--light); 
     opacity: 0; 
     transition: all .5s ease-in-out;
@@ -183,8 +192,9 @@ body {
 
 /* Footer Section */
 .custom-footer {
-    background: var(--blush); 
+    background: var(--blush);
 }
+
 .custom-link {
     color: var(--dark1); 
     padding:20px;   
@@ -196,5 +206,3 @@ body {
 .custom-link i:hover {
     color: var(--dark2); 
 }
-
-/* TO DO: Add Media Queries for responsive design. Everything needs to just be stacked on top of one another */
