--- a/assets/style/style2.css
+++ b/assets/style/style2.css
@@ -1,8 +1,11 @@
 :root {
-    --blush:rgb(216, 183, 199); 
-    --light: rgb(255, 255, 255); 
+    --blush:rgb(210, 179, 194); 
+    --light: rgb(245, 236, 236); 
     --dark1: #747487;
     --dark2: rgb(59, 59, 77);
+    --text_shadow: 2px 2px 6px white; 
+    --box_shadow: 3px 3px 6px var(--dark2);
+    --card_color: 
 }
 * {
     font-family: 'Playfair Display', serif;
@@ -23,22 +26,20 @@ body {
 .sparkley {
 background: lighten( #2c3e50 , 10% );
 color: rgba(255,255,255,1); 
-border: none;
-font-weight: normal;
 transition: all 0.25s ease;
-box-shadow: 0 38px 32px -23px black;
+z-index: -3; 
 }
 .sparkley:hover {
-    /* background: #2c3e50; */
     color: transparentize( rgba(255,255,255,1),0.8 );
 } 
+
 /* .hide {
     display:none; 
 } */
 
 /* Nav Bar  */
 .nav-wrapper-custom {
-    background-image: linear-gradient(to right, var(--dark1), var(--dark2));
+    background-image: linear-gradient(to left, white, var(--light));
 }
 .nav-wrapper-custom a{ 
     color: var(--blush); 
@@ -52,34 +53,57 @@ box-shadow: 0 38px 32px -23px black;
     font-size: 1.5em;  
 }
 
-/* Home Page */
-#home-title {
+/* Basic Settings */
+.custom-header {
     text-align: center; 
-    text-shadow: 2px 2px var(--light);
+    text-shadow: var(--text_shadow); 
 }
+.custom-container {
+    background-color: rgba(255, 255, 255, 0.646); 
+    padding: 20px; 
+    border-radius: 25px;
+    box-shadow: 2px 2px 6px var(--dark2);
+}
+.custom-card {
+    background-color: rgba(255, 255, 255, 0.646); 
+    padding: 30px; 
+    margin: 30px; 
+    border-radius: 25px;
+}
+.card-body p{
+    padding: 20px 0; 
+    font-family: Arial, Helvetica, sans-serif;
+}
+.custom-container p{
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6em;
+}
+.custom-link {
+    color: var(--dark1); 
+}
+.custom-link:hover {
+    color: var(--dark2); 
+    text-decoration: underline;
+}
+
+/* Home Page */
 #profile-pic {
     border-radius: 50%;
     position: relative; 
-    width: 400px; 
-    box-shadow: 3px 3px 6px var(--dark2);
-}
-.custom-card {
-    background-color: rgb(255, 255, 255, .7); 
-    padding: 20px; 
-    margin: 30px; 
-    border-radius: 25px;
+    width: 350px; 
+    box-shadow: var(--box_shadow); 
 }
 .overlay {
     background-color: var(--dark1);
     color: var(--blush); 
     border-radius: 50%;
     position: absolute;  
-    top: 20px; 
+    top: 30px; 
     left: 50%; 
-    margin-left: -200px;  
+    margin-left: -175px;  
     text-align: center;
-    width: 400px; 
-    height: 400px;  
+    width: 350px; 
+    height: 350px;  
     border: 1px solid var(--light); 
     opacity: 0; 
     transition: all .5s ease-in-out;
@@ -89,7 +113,7 @@ box-shadow: 0 38px 32px -23px black;
 }
 .overlay-text {
     position: absolute;
-    width: 400px;  
+    width: 350px;  
     text-align: center;
     top: 30%; 
     transition: all .5s ease-in-out;
@@ -107,71 +131,27 @@ box-shadow: 0 38px 32px -23px black;
     text-shadow: 2px 2px var(--light);
 }
 .card-content-header i, .card-content-header h3{
-    font-size: 2em;
+    font-size: 2.5em;
     padding: 5px; 
 }
 .card-content-header h3 {
     margin-bottom: 30px; 
-    font-size: 1.5em;
-}
-.card-body p{
-    padding: 40px 10px; 
+    font-size: 1em;
 }
 #profile-link a{
     color: var(--dark1); 
-}
-#profile-link {
-    padding-left: 10px;
 }
 #profile-link a:hover {
     color:var(--dark2); 
     text-decoration: underline;
 }
-/* About Me Page */
-#about-me-page h3{
-    text-align: center;
-    text-shadow: 2px 2px var(--light);
-}
-.about-me-text {
-    background-color: rgb(255, 255, 255, .7); 
-    padding: 50px;
-    box-shadow: 2px 2px 6px var(--dark2);
-    margin: 20px; 
-    line-height: 1.6em;
-    border-radius: 25px;
-}
-.about-me-text a{
-    color:var(--dark1); 
-}
-.about-me-text a:hover {
-    text-decoration: underline;
-    color:var(--dark2); 
-}
 
 /* Projects Page */
-#projects-page h3 {
-    text-align: center;
-    text-shadow: 2px 2px var(--light);
-}
-.custom-card p{
-    line-height: 1.5em;
-    padding-top: 10px; 
-}
-.custom-card h4{
-    text-align: center;
-}
 .project-nav {
     display: flex; 
     justify-content: center;
     align-items: center;
     flex-direction: row;
-}
-.custom-link {
-    color: var(--dark1); 
-}
-.custom-link:hover {
-    color: var(--dark2); 
-    text-decoration: underline;
 }
 .link-container {
     display: flex; 
@@ -189,10 +169,6 @@ box-shadow: 0 38px 32px -23px black;
     justify-content: center; 
 }
 /* Contact Me Page */
-#contact {
-    text-align: center;
-    text-shadow: 2px 2px var(--light);
-}
 #submit-btn{
     background-color: var(--dark1);
     border-radius: 10px;
@@ -208,31 +184,19 @@ box-shadow: 0 38px 32px -23px black;
 .custom-footer {
     background: var(--blush);
 }
-
-.custom-link {
-    color: var(--dark1); 
-    padding:20px;   
-}
 .custom-link i{
     font-size: 2em;
+    padding: 10px; 
     margin-top: 20px;
+    color: var(--dark1); 
 }
 .custom-link i:hover {
     color: var(--dark2); 
 }
 
-@media only screen and (min-width: 700px) {
-    #brain-breaks, #weather-app, #code-quiz {
-        width: 60%; 
-    }
-    #projects-page {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-    }
-    .card-content-header h3 {
-        font-size: 2em;
+@media only screen and (max-width: 700px) {
+    .card-content-header h3, .card-content-header i {
+        font-size: 1em;
     }
 
 }
